--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
     </div>
     <script>
+    
       function saveOptions() {
         var options = {
           'url': $("#url").val(),
@@ -51,6 +52,12 @@
       }
 
       $().ready(function() {
+        var hash = getURLVariable('hash');
+        hash = decodeURI(hash);
+        if (hash) {
+          $('#hash').html(hash);
+        }
+
         $("#b-cancel").click(function() {
           console.log("Cancel");
           document.location = "pebblejs://close";
@@ -60,12 +67,20 @@
           console.log("Submit");
 
           var location = "pebblejs://close#" + encodeURIComponent(JSON.stringify(saveOptions()));
-          console.log("Warping to: " + location);
-          console.log(location);
+          console.log("Return location: " + location);
           document.location = location;
         });
-
       });
+
+      function getURLVariable(name) {
+        name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+        var regexS = "[\\?&]"+name+"=([^&#]*)",
+          regex = new RegExp(regexS),
+          results = regex.exec(window.location.href);
+        if (results == null) return "";
+        else return results[1];
+      }
+
     </script>
   </body>
 </html>
