Removed duplicate configuration.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <body>
     <div data-role="page" id="main">
       <div data-role="header" class="jqm-header">
-        <h1>Voice Text Configuration</uh1>
+        <h1>Voice Text</uh1>
       </div>
 
       <div data-role="content">
-
         <div data-role="fieldcontain">
           <label for="url">Gateway URL:</label>
           <input type="text" name="url" id="url"></input>
