--- a/findmeanything.html
+++ b/findmeanything.html
@@ -16,8 +16,8 @@
 
       <div data-role="content">
         <div data-role="fieldcontain">
-          <label for="searchingFor" style="display: block; padding-bottom: 0.5em; width: 100%;">Whatcha wanna find?</label>
-          <textarea cols="40" rows="8" name="searchingFor" id="searchingFor" style="color: #000; width: 100%;"></textarea>
+          <label for="hash" style="display: block; padding-bottom: 0.5em; width: 100%;">Hash</label>
+          <textarea cols="40" rows="8" name="hash" id="hash" style="color: #000; width: 100%;"></textarea>
         </div>
 
 
@@ -42,17 +42,17 @@
     <script>
       function saveOptions() {
         var options = {
-          'searchingFor': $("#searchingFor").val()
+          'hash': $("#hash").val()
         }
         return options;
       }
 
       $(document).ready(function() {
-        var priorSearch = getURLVariable('searchingFor');
-        priorSearch = decodeURI(priorSearch);
+        var priorHash = getURLVariable('hash');
+        priorHash = decodeURI(priorHash);
 
-        if (priorSearch) {
-          $('#searchingFor').html(priorSearch);
+        if (priorHash) {
+          $('#hash').html(priorHash);
         }
         $("#b-cancel").click(function() {
           document.location = "pebblejs://close";
