--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         </div>
 
         <div data-role="fieldcontain">
-          <label for="hash">Hash:</label>
+          <label for="hash" style="display: block; padding-bottom: 0.5em; width: 100%;">Hash</label>
+          <textarea cols="40" rows="8" name="hash" id="hash" style="color: #000; width: 100%;"></textarea>
+<!--          <label for="hash">Hash:</label>
           <input type="text" name="hash" id="hash"></input>
-        </div>
+        </div> -->
 
         <div class="ui-body ui-body-b">
           <fieldset class="ui-grid-a">
