--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
 
         <div data-role="fieldcontain">
-          <label for="hash" style="display: block; padding-bottom: 0.5em; width: 100%;">Hash</label>
-          <textarea cols="40" rows="8" name="hash" id="hash" style="color: #000; width: 100%;"></textarea>
+          <label for="hash">Hash</label>
+          <textarea cols="40" rows="8" name="hash" id="hash"</textarea>
 <!--          <label for="hash">Hash:</label>
           <input type="text" name="hash" id="hash"></input>
         </div> -->
