--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div data-role="fieldcontain">
           <label for="hash">Hash</label>
-          <textarea cols="40" rows="8" name="hash" id="hash"</textarea>
+          <textarea cols="40" rows="8" name="hash" id="hash"></textarea></textarea>
 <!--          <label for="hash">Hash:</label>
           <input type="text" name="hash" id="hash"></input>
         </div> -->
