--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <div data-role="fieldcontain">
           <label for="hash">Hash</label>
           <textarea cols="40" rows="8" name="hash" id="hash"></textarea></textarea>
-<!--          <label for="hash">Hash:</label>
           <input type="text" name="hash" id="hash"></input>
         </div> -->
 
@@ -54,7 +53,7 @@
         priorHash = decodeURI(priorHash);
 
         if (priorHash) {
-          $('#hash').html(priorHash);
+          $('#hash').val(priorHash);
         }
         $("#b-cancel").click(function() {
           document.location = "pebblejs://close";
