--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
         <div data-role="fieldcontain">
           <label for="hash">Hash</label>
-          <textarea cols="40" rows="8" name="hash" id="hash"></textarea></textarea>
           <input type="text" name="hash" id="hash"></input>
-        </div> -->
+        </div>
 
         <div class="ui-body ui-body-b">
           <fieldset class="ui-grid-a">
