Added sender field

--- a/voicetextconfig.html
+++ b/voicetextconfig.html
@@ -50,8 +50,8 @@
         var options = {
           'stem': $("#stem").val(),
           'username': $("#username").val(),          
-          'hash': $("#hash").val()
-          'sender': $("#sender").val(),          
+          'hash': $("#hash").val(),
+          'sender': $("#sender").val()          
         }
         return options;
       }
