--- a/voicetextconfig.html
+++ b/voicetextconfig.html
@@ -15,6 +15,7 @@
       </div>
 
       <div data-role="content">
+        
         <div data-role="fieldcontain">
           <label for="stem">Gateway URL stem:</label>
           <input type="text" name="stem" id="stem"></input>
@@ -61,7 +62,7 @@
         var priorStem = getURLVariable('stem');
         priorStem = decodeURI(priorStem);
         if (priorStem) {
-          $('#Stem').val(priorStem);
+          $('#stem').val(priorStem);
         }
 
         var priorUsername = getURLVariable('username');
