Corrected typo Stem not stem

--- a/voicetextconfig.html
+++ b/voicetextconfig.html
@@ -62,7 +62,7 @@
         var priorStem = getURLVariable('stem');
         priorStem = decodeURI(priorStem);
         if (priorStem) {
-          $('#stem').val(priorStem);
+          $('#stem').html(priorStem);
         }
 
         var priorUsername = getURLVariable('username');
